--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,9 @@
     <string name="title_activity_main_page">OnChat</string>
     <string name="title_activity_main_page2">OnChat</string>
     <string name="title_activity_chat">ChatActivity</string>
+    <string name="hello_world">Hello world!</string>
+    <string name="menu_settings">Settings</string>
+    <string name="label_search">Search</string>
+    <string name="label_multiple_numbers">Multiple numbers</string>
+    <!--<string name="title_activity_main">Contacts Content Provider</string>-->
 </resources>
