--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,5 +24,6 @@
     <string name="menu_settings">Settings</string>
     <string name="label_search">Search</string>
     <string name="label_multiple_numbers">Multiple numbers</string>
+    <string name="title_activity_main35">Main3Activity5</string>
     <!--<string name="title_activity_main">Contacts Content Provider</string>-->
 </resources>
